# segmentation

./: Capfile  Gemfile  Rakefile  WriteMetaFile.m  WriteMhaFile.m  info  read_primary_evector.m  tara.conf  tarantula_command
chaste/: testFile.cxx
config/: deploy.rb  tara.conf
itk/: .gitignore  CMakeLists.txt  Dirs.hpp  ExtractVectors.cxx  GenerateCentroids.cxx  Threshold.cxx  VoxWriter.cxx  imaging.cpp  imaging.h  itk.tmproj  vox_writer.cpp
itk_src/: CMakeLists.txt  ConvertImageFormat.cxx  Dirs.hpp  ExtractVectors.cxx  VoxWriter.cxx  itk.tmproj
matlab/: WriteMetaFile.m  extract_vectors.m  generate_eigenvectors.m  read_mri_data.m  scale_data.m  translate_mri_data.m  translate_old_mri_data.m  write_mhd_files.m
ruby/lib/: segmentation.rb
ruby/lib/segmentation/: dirs.rb  mesh_data.rb  mhd_data.rb  mhd_header.rb  paths.rb  writers.rb
